@@ -195,3 +195,5 @@ Entity中toVo区别是否忽略大小写
 5、Add HTMLFilter
 6、修改getLog为get
 7、增加一些工具方法
+8、增加BeanUtil
+9、增加ConsoleLog
